third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/expansion/use_nested_self_as.exp
module 0x2::X {
    struct S {
    }
    public fun foo() {
        ()
    }
}

module 0x2::M {
    use 0x2::X;
    struct X {
        f: X::S,
        f2: X::S,
    }
    fun bar() {
        X::foo();
        X::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: variants not allowed in this context
   ┌─ use_nested_self_as.move:12:12
   │
12 │         f: X::S,
   │            ^^^^

error: variants not allowed in this context
   ┌─ use_nested_self_as.move:13:13
   │
13 │         f2: X::S,
   │             ^^^^
